refactor: change game server to colyseus

--- a/pages/object-showcase.html
+++ b/pages/object-showcase.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vật phẩm game</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Baloo+2:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <style>
       body {
         padding: 20px;
@@ -268,8 +269,8 @@
         }
       }
     </script>
-    <script type="module" src="js/helpers.js"></script>
-    <script type="module" src="js/object.js"></script>
-    <script type="module" src="scripts/showcase.js"></script>
+    <script type="module" src="../js/helpers.js"></script>
+    <script type="module" src="../js/object.js"></script>
+    <script type="module" src="../scripts/showcase.js"></script>
   </body>
 </html>
