--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
           </div>
         </button>
 
-        <button onclick="window.location.href='lobby.html'" class="menu-btn btn-secondary">
+        <button
+          onclick="window.location.href='multiplayer-spa.html'"
+          class="menu-btn btn-secondary"
+        >
           <span class="new-badge">MỚI!</span>
           <div class="btn-content">
             <svg class="btn-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
