--- a/multiplayer-spa.html
+++ b/multiplayer-spa.html
@@ -21,7 +21,8 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "https://unpkg.com/three@0.180.0/build/three.module.js"
+          "three": "https://unpkg.com/three@0.180.0/build/three.module.js",
+          "three/examples/jsm/loaders/GLTFLoader.js": "https://unpkg.com/three@0.180.0/examples/jsm/loaders/GLTFLoader.js"
         }
       }
     </script>
