--- a/multiplayer-spa.html
+++ b/multiplayer-spa.html
@@ -33,6 +33,7 @@
     <!-- NOT using game-multiplayer.js - logic is embedded in SPA -->
     <script type="module" src="scripts/network-strategy.js"></script>
     <script type="module" src="js/object.js"></script>
+    <script type="module" src="scripts/tutorial-panel.js"></script>
 
     <!-- Styles -->
     <link href="style.css" rel="stylesheet" />
@@ -313,63 +314,88 @@
         <div class="game-title">
           <div class="title">Tạm dừng</div>
         </div>
-        <div id="controls">
-          <div class="controls-column controls-direction">
-            <div class="direction-grid">
-              <div class="key-card key-up">
-                <span class="key-label">
-                  <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
-                    <path d="M16 4l12 20H4z" fill="#ffd700"></path>
-                  </svg>
-                </span>
-                <span class="key-desc">Nhảy</span>
-              </div>
-              <div class="key-card key-left">
-                <span class="key-label">
-                  <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
-                    <path d="M4 14l20 12V2z" fill="#ffd700"></path>
-                  </svg>
-                </span>
-                <span class="key-desc">Trái</span>
-              </div>
-              <div class="key-card key-down">
-                <span class="key-label">
-                  <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
-                    <path d="M16 24L4 4h24z" fill="#ffd700"></path>
-                  </svg>
-                </span>
-                <span class="key-desc">Trượt (Siu)</span>
-              </div>
-              <div class="key-card key-right">
-                <span class="key-label">
-                  <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
-                    <path d="M28 14L8 2v24z" fill="#ffd700"></path>
-                  </svg>
-                </span>
-                <span class="key-desc">Phải</span>
+
+        <div class="tutorial-tabs" id="tutorialTabs">
+          <button class="tab-button active" data-target="controlsSection">Điều khiển</button>
+          <button class="tab-button" data-target="pointObjectsSection">Vật phẩm cộng điểm</button>
+          <button class="tab-button" data-target="penaltyObjectsSection">Vật phẩm trừ điểm</button>
+        </div>
+
+        <div class="tutorial-section active" id="controlsSection">
+          <div id="controls">
+            <div class="controls-column controls-direction">
+              <div class="direction-grid">
+                <div class="key-card key-up">
+                  <span class="key-label">
+                    <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
+                      <path d="M16 4l12 20H4z" fill="#ffd700"></path>
+                    </svg>
+                  </span>
+                  <span class="key-desc">Nhảy</span>
+                </div>
+                <div class="key-card key-left">
+                  <span class="key-label">
+                    <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
+                      <path d="M4 14l20 12V2z" fill="#ffd700"></path>
+                    </svg>
+                  </span>
+                  <span class="key-desc">Trái</span>
+                </div>
+                <div class="key-card key-down">
+                  <span class="key-label">
+                    <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
+                      <path d="M16 24L4 4h24z" fill="#ffd700"></path>
+                    </svg>
+                  </span>
+                  <span class="key-desc">Trượt (Siu)</span>
+                </div>
+                <div class="key-card key-right">
+                  <span class="key-label">
+                    <svg width="32" height="28" viewBox="0 0 32 28" class="key-icon" aria-hidden="true">
+                      <path d="M28 14L8 2v24z" fill="#ffd700"></path>
+                    </svg>
+                  </span>
+                  <span class="key-desc">Phải</span>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="controls-column controls-extra">
-            <div class="extra-grid">
-              <div class="key-card">
-                <span class="key-label">ESC</span>
-                <span class="key-desc">Quay về sảnh</span>
-              </div>
-              <div class="extra-bottom">
-              <div class="key-card">
-                <span class="key-label">V</span>
-                <span class="key-desc">Đổi góc nhìn</span>
-              </div>
-              <div class="key-card">
-                <span class="key-label">P</span>
-                <span class="key-desc">Thay skin</span>
-              </div>
+            <div class="controls-column controls-extra">
+              <div class="extra-grid">
+                <div class="key-card">
+                  <span class="key-label">ESC</span>
+                  <span class="key-desc">Quay về sảnh</span>
+                </div>
+                <div class="extra-bottom">
+                  <div class="key-card">
+                    <span class="key-label">V</span>
+                    <span class="key-desc">Đổi góc nhìn</span>
+                  </div>
+                  <div class="key-card">
+                    <span class="key-label">P</span>
+                    <span class="key-desc">Thay skin</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+        <div class="tutorial-section" id="pointObjectsSection">
+          <div class="point-object-intro">
+            Ghi nhớ những vật phẩm tích cực dưới đây để ưu tiên thu thập khi lướt. Thu thập càng
+            nhiều, bạn càng dễ vượt đối thủ.
+          </div>
+          <ul class="point-object-list" id="pointObjectList"></ul>
+        </div>
+
+        <div class="tutorial-section" id="penaltyObjectsSection">
+          <div class="point-object-intro">
+            Những vật phẩm nguy hiểm này sẽ trừ điểm đáng kể – né tránh để không tụt hạng.
+          </div>
+          <ul class="point-object-list" id="penaltyObjectList"></ul>
+        </div>
+
         <table id="ranks"></table>
         <div class="animate-flicker" id="variable-content">Bấm phím bất kì để tiếp tục...</div>
       </div>
